[gd_scene load_steps=4 format=3 uid="uid://c7408q8fvvv4y"]

[ext_resource type="Script" uid="uid://b4vo86aawkpur" path="res://Bullets/Double/Nearing/DoubleNearingBullet.gd" id="1_o6ga5"]
[ext_resource type="Texture2D" uid="uid://dvmauv1qi1p3x" path="res://icon.svg" id="2_2cwyb"]

[sub_resource type="CircleShape2D" id="CircleShape2D_s8kjg"]
radius = 13.0384

[node name="DoubleNearingBullet" type="Node2D"]
script = ExtResource("1_o6ga5")
metadata/_custom_type_script = "uid://c1q1rdvrqjev5"

[node name="Bullet1" type="Node2D" parent="."]

[node name="Sprite2D" type="Sprite2D" parent="Bullet1"]
scale = Vector2(0.2, 0.2)
texture = ExtResource("2_2cwyb")

[node name="Area2D" type="Area2D" parent="Bullet1"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Bullet1/Area2D"]
shape = SubResource("CircleShape2D_s8kjg")

[node name="Bullet2" type="Node2D" parent="."]

[node name="Sprite2D2" type="Sprite2D" parent="Bullet2"]
scale = Vector2(0.2, 0.2)
texture = ExtResource("2_2cwyb")

[node name="Area2D2" type="Area2D" parent="Bullet2"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Bullet2/Area2D2"]
shape = SubResource("CircleShape2D_s8kjg")

[connection signal="body_entered" from="Bullet1/Area2D" to="." method="_on_area_2d_body_entered"]
[connection signal="body_entered" from="Bullet2/Area2D2" to="." method="_on_area_2d_body_entered"]
